[package]
name = "rowan-peg"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["rowan-peg-utils"]

[features]
trace = ["peg/trace"]

[dependencies]
char-classes = "0.3.2"
linked-hash-map = "0.5.6"
peg = "0.8.5"
rowan = "0.15.15"
rowan-peg-utils = { version = "0.1.0", path = "rowan-peg-utils" }
to-true = "0.1.1"
unicode-ident = "1.0.18"
