[package]
name = "rowan-peg"
version = "0.2.5"
edition = "2024"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["lossless", "parser", "rowan", "grammar"]
categories = ["parsing"]
description = "Convert ABNF like grammar to rust-peg build `rowan` lossless syntax tree"

license = "MIT"
repository = "https://github.com/A4-Tacks/rowan-peg-rs"
readme = "README.md"

[workspace]
members = ["rowan-peg-utils", "examples/example-json", "examples/simple-kv", "rowan-peg-macro"]

[features]
trace = ["peg/trace"]

[dependencies]
char-classes = "0.3.4"
getopts-macro = "0.1.8"
line-column = "0.2.0"
linked-hash-map = "0.5.6"
peg = "0.8.5"
rowan = "0.15.15"
rowan-peg-utils = "0.2.1"
to-true = "0.1.1"
unicode-ident = "1.0.18"
