[package]
name = "rowan-peg-macro"
version = "0.2.0"
edition = "2024"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
description = "Macro for rowan-peg"

license = "MIT"
repository = "https://github.com/A4-Tacks/rowan-peg-rs"

[lib]
proc-macro = true

[dependencies]
litrs = "0.5.1"
proc-macro-tool = "0.8.38"
rowan-peg = { version = "0.2.0", path = ".." }
